; ModuleID = '/home/carl/AnghaBench/freebsd/sys/geom/journal/extr_g_journal.c_g_journal_copy_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/geom/journal/extr_g_journal.c_g_journal_copy_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g_journal_softc = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"Starting copy of journal.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.g_journal_softc*)* @g_journal_copy_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @g_journal_copy_start(%struct.g_journal_softc* %0) #0 {
  %2 = alloca %struct.g_journal_softc*, align 8
  store %struct.g_journal_softc* %0, %struct.g_journal_softc** %2, align 8
  %3 = load %struct.g_journal_softc*, %struct.g_journal_softc** %2, align 8
  %4 = getelementptr inbounds %struct.g_journal_softc, %struct.g_journal_softc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %13, label %7

7:                                                ; preds = %1
  %8 = load %struct.g_journal_softc*, %struct.g_journal_softc** %2, align 8
  %9 = getelementptr inbounds %struct.g_journal_softc, %struct.g_journal_softc* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = call i32 @GJ_DEBUG(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.g_journal_softc*, %struct.g_journal_softc** %2, align 8
  %12 = call i32 @g_journal_metadata_update(%struct.g_journal_softc* %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.g_journal_softc*, %struct.g_journal_softc** %2, align 8
  %15 = call i32 @g_journal_copy_send(%struct.g_journal_softc* %14)
  ret void
}

declare dso_local i32 @GJ_DEBUG(i32, i8*) #1

declare dso_local i32 @g_journal_metadata_update(%struct.g_journal_softc*) #1

declare dso_local i32 @g_journal_copy_send(%struct.g_journal_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
